tests/snapshots/examples_fixtures/type_system__infer_base_types.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/infer_base_types.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum`.

  examples/type_system/infer_base_types.flx:43:19
   |
43 |     assert_eq(sum(ints), 60)
   |                   ^^^^
   |                   ---- this argument has type `Array<Int>`

Note:
  expected argument type: List<Int>
  found argument type: Array<Int>
  the actual argument type is inferred from this expression

Help:
  Pass a `List<Int>` value as the 1st argument.
== stdout ==
<not executed>
